--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+
 :root {
   --success: limegreen;
   --error: rgb(236, 26, 72);
@@ -6,6 +8,11 @@
 /* TAGS */
 body {
   background-color: lightgrey;
+  font-family: "Montserrat", sans-serif;
+}
+
+ul {
+  list-style-type: none;
 }
 
 /* CLASSES */
@@ -16,19 +23,37 @@ body {
   padding-left: 10px;
 }
 
+.container h1 {
+  text-align: center;
+}
+
+.lead {
+  padding-top: 20px;
+}
 /*  FORMULAR */
+.form,
+.kontakte {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .form-input {
-  position: relative;
+  /* position: relative; */
+  width: 300px;
 }
 
 .form-input label {
   display: block;
+  font-size: 1.5rem;
 }
 
-.form-input input {
+.form-input input,
+.suche {
   display: block;
   border: 1px solid lightgray;
   border-radius: 5px;
+  width: 290px;
 }
 
 .form-input input:focus {
@@ -56,7 +81,31 @@ body {
   visibility: visible;
 }
 
+.kontakt-liste {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 380px;
+}
+
 /* .ausblenden */
 .hide {
   display: none;
+}
+
+.add-btn {
+  background-color: limegreen;
+  border-color: limegreen;
+  border-radius: 5px;
+  color: whitesmoke;
+  font-weight: bolder;
+}
+
+.clear-btn {
+  background-color: tomato;
+  border-color: tomato;
+  border-radius: 5px;
+  color: whitesmoke;
+  font-weight: bolder;
 }
